--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: tbartocc <tbartocc@student.42.fr>          +#+  +:+       +#+         #
+#    By: peli <peli@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/05 14:34:27 by tbartocc          #+#    #+#              #
-#    Updated: 2024/12/18 18:33:05 by tbartocc         ###   ########.fr        #
+#    Updated: 2025/01/02 15:33:57 by peli             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -71,7 +71,8 @@ SRC =	ft_atoi.c \
 	ft_tabdup.c \
 	ft_tablen.c \
 	ft_tolower.c \
-	ft_toupper.c 
+	ft_toupper.c \
+	get_next_line_OLD.c
 
 INCLUDE = includes
 HEADER = $(INCLUDE)/ft.h
