--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,44 +1,31 @@
 {
-	"version": "0.2.0",
-	"configurations": [
-	  {
-		"name": "Déboguer mon programme",
-		"type": "cppdbg",
-		"request": "launch",
-		"program": "${workspaceFolder}/minishell",
-		"args": [],
-		"stopAtEntry": false,
-		"cwd": "${workspaceFolder}",
-		"environment": [],
-		"externalConsole": false,
-		"MIMode": "gdb",
-		"setupCommands": [
-		  {
-			"description": "Activer l'impression automatique pour gdb",
-			"text": "-enable-pretty-printing",
-			"ignoreFailures": true
-		  }
-		],
-		"preLaunchTask": "Build"
-	  },
-	  {
-		"name": "C/C++ Runner: Debug Session",
-		"type": "cppdbg",
-		"request": "launch",
-		"args": [],
-		"stopAtEntry": false,
-		"externalConsole": false,
-		"cwd": "/workspaces/minishell/srcs",
-		"program": "/workspaces/minishell/srcs/build/Debug/outDebug",
-		"MIMode": "gdb",
-		"miDebuggerPath": "gdb",
-		"setupCommands": [
-		  {
-			"description": "Enable pretty-printing for gdb",
-			"text": "-enable-pretty-printing",
-			"ignoreFailures": true
-		  }
-		]
-	  }
-	]
-  }
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Debug mon programme",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/minishell", 
+            "args": [], 
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Activer l'impression en mode Pretty pour gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Définir la version désassemblage sur Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "build with make", 
+            "miDebuggerPath": "/usr/bin/gdb" 
+        }
+    ]
+}
